# uav-exploration

./: README.md
catkin_ws/: .gitignore  README-zh.md
catkin_ws/scripts/: haha.sh
catkin_ws/src/RACER/realflight_modules/px4ctrl/config/: ctrl_param_fpv.yaml
catkin_ws/src/RACER/realflight_modules/px4ctrl/launch/: multi_ctrl.launch  singl_run.launch  takeoff.sh
catkin_ws/src/RACER/swarm_exploration/exploration_manager/: CMakeLists.txt  package.xml
catkin_ws/src/RACER/swarm_exploration/exploration_manager/config/: swarm.rviz
catkin_ws/src/RACER/swarm_exploration/exploration_manager/launch/: single_drone_exploration.xml  single_drone_exploration_beta.xml  single_drone_planner.xml  swarm_exploration.launch  swarm_exploration_copy.launch
catkin_ws/src/RACER/swarm_exploration/exploration_manager/msg/: swarm_drone_basecoor.msg
catkin_ws/src/RACER/swarm_exploration/exploration_manager/src/: fast_exploration_fsm.cpp  fast_exploration_manager.cpp
catkin_ws/src/RACER/swarm_exploration/plan_env/include/plan_env/: map_ros.h
catkin_ws/src/RACER/swarm_exploration/plan_env/src/: map_ros.cpp
